# lsp-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION-GUIDE.md  README-remote.md  README.md  README.org  REMOTE-SERVER-SETUP.md  REMOTE_USAGE.md  SERVER-MODE-GUIDE.md  TOML_CONFIG_FIX.md  Temp.md  build.rs  example-config.el  flake.nix  languages.toml  lsp-copilot.el  lsp-proxy-completion.el  lsp-proxy-copilot.el  lsp-proxy-core.el  lsp-proxy-diagnostics.el  lsp-proxy-imenu.el  lsp-proxy-inlay-hints.el  lsp-proxy-inline-completion.el  lsp-proxy-large-file.el  lsp-proxy-lsp-bridge.el  lsp-proxy-org.el  lsp-proxy-remote.el  lsp-proxy-server.toml.example  lsp-proxy-signature.el  lsp-proxy-tramp.el  lsp-proxy-utils.el  lsp-proxy-xref.el  lsp-proxy.el  package.json  remote-config-example.toml  remote-config-examples.toml  remote-lsp-pipe.toml.example  remote-lsp.toml.example  setup-remote-dev.sh  (+3 more)
.github/workflows/: main.yml  npm-publish.yml
docs/: LOGGING_OPTIMIZATION.md  PERMISSIONS.md  QUICK_START.md  Quick-Start-Guide.md  Remote-LSP-Architecture.md  SSH-Forwarding-Complete-Example.md  SSH-Forwarding-Mechanism.md  SSH-Pipe-Communication.md  SSH-Pipe-Implementation-Summary.md  TRAMP-Integration.md  VERSION_MANAGEMENT.md  async-loading-with-progress.md  integration-guide.md  large-file-optimization.md  remote-architecture.md  remote-development-implementation.md  server-side-file-reading.md
npm/@emacs-lsp-proxy/darwin-arm64/: package.json
npm/@emacs-lsp-proxy/darwin-x64/: package.json
npm/@emacs-lsp-proxy/linux-arm64/: package.json
npm/@emacs-lsp-proxy/linux-x64/: package.json
npm/@emacs-lsp-proxy/win32-x64/: package.json
npm/emacs-lsp-proxy/: install.js  package.json
proto/: rpc.proto
scripts/: extract-version.js  server-install.sh  test-npm-package.js  test-server-mode.sh  test-update.js  update-version.js
src/: application.rs  args.rs  bytecode.rs  client.rs  code_action.rs  completion_cache.rs  config.rs  connection.rs  controller.rs  dispatch.rs  document.rs  editor.rs  error.rs  job.rs  large_file_manager.rs  logging.rs  lsp_ext.rs  main.rs  main_loop.rs  msg.rs  registry.rs  req_queue.rs  syntax.rs  thread.rs  utils.rs
src/fuzzy/: filter.rs  fuzzy.rs  mod.rs  strings.rs
src/handlers/: mod.rs  notification.rs  remote.rs  request.rs  tramp.rs
src/lsp/: file_event.rs  jsonrpc.rs  mod.rs  transport.rs
src/remote/: deploy.rs  deployment.rs  detector.rs  lsp_client.rs  mod.rs  protocol.rs  router.rs  rpc.rs  server.rs  server_config.rs  server_connection.rs  ssh.rs  ssh_config.rs
src/remote/auth/: mod.rs
src/remote/config/: mod.rs
src/remote/connection/: mod.rs  server_mode.rs  ssh.rs  ssh_tunnel.rs
src/remote/filesystem/: mod.rs
src/remote/lsp/: mod.rs
src/thread/: mod.rs  pool.rs
