[package]
name = "lsp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.9"
# Logging
fern = "0.6"
log = "0.4"
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lsp-types = { version = "0.95", features = ["proposed"] }
dunce = "1.0.4"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
tokio-stream = "0.1.14"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
toml = "0.8.8"
which = "7.0.2"
thiserror = "1.0.51"
parking_lot = "0.12.1"
jod-thread = "0.1.2"
num_cpus = "1.16.0"
globset = "0.4.14"
futures-executor = "0.3.30"
stringslice = "0.2.0"
lazy_static = "1.4.0"
smallvec = "1.13.1"
itertools = "0.13.0"
once_cell = "1.20.2"
etcetera = "0.8.0"
percent-encoding = "2.3.1"
