[package]
name = "lsp-proxy"
description = "An LSP client for Emacs implemented in Rust."
homepage = "https://github.com/jadestrong/lsp-proxy"
repository = "https://github.com/jadestrong/lsp-proxy"
readme = "README.md"
version = "0.5.7"
edition = "2021"
keywords = ["emacs", "lsp", "proxy"]
categories = ["command-line-utilities"]

[[bin]]
name = "emacs-lsp-proxy"
path = "src/main.rs"

[[bin]]
name = "lsp-proxy-server"
path = "src/bin/lsp-proxy-server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.9"
# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "local-time"] }
tracing-appender = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lsp-types = { version = "0.95", features = ["proposed"] }
dunce = "1.0.4"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync", "signal"] }
tokio-stream = "0.1.14"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
toml = "0.8.8"
which = "7.0.2"
thiserror = "1.0.51"
parking_lot = "0.12.1"
jod-thread = "0.1.2"
num_cpus = "1.16.0"
globset = "0.4.14"
futures-executor = "0.3.30"
stringslice = "0.2.0"
lazy_static = "1.4.0"
smallvec = "1.13.1"
itertools = "0.13.0"
once_cell = "1.20.2"
etcetera = "0.8.0"
# Remote development dependencies
async-trait = "0.1.68"
russh = "0.45.0"
russh-keys = "0.45.0"
dirs = "5.0.1"
md5 = "0.7.0"
uuid = { version = "1.0", features = ["v4"] }
gethostname = "0.4.3"
env_logger = "0.11.3"
clap = { version = "4.0", features = ["derive"] }
